# drift-gym

./: .gitignore  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py  test_installation.py
docs/: CALIBRATION_REPORT.md  RESEARCH_IMPROVEMENTS_SUMMARY.md
drift_gym/envs/: drift_car_env_advanced.py
drift_gym/simulator/: __init__.py  environment.py
experiments/results/logs/baseline/sac/seed_0/: evaluations.npz
experiments/results/logs/baseline/sac/seed_0/SAC_1/: events.out.tfevents.1760473799.MacBookPro.lan.47972.0
